--- a/templates/base/admin/logout.latte
+++ b/templates/base/admin/logout.latte
@@ -7,7 +7,7 @@
 
             <div class="space-y-4">
                 <div class="text-center">
-                    {\Ivy\Button::submit(text('logout.button.submit'))}
+                    {button type:submit, text:text('logout.logout')}
                 </div>
             </div>
         </form>
