--- a/templates/base/admin/register.latte
+++ b/templates/base/admin/register.latte
@@ -7,29 +7,29 @@
             {csrf()}
 
             <div class="space-y-4">
-                <h1 class="leading-none text-6xl font-bold">{text('register.header')}</h1>
+                <h1 class="leading-none text-6xl font-bold">{text('register.register')}</h1>
 
                 <div>
                     <label>
-                        <input type="text" name="username" placeholder="{text('core.placeholder.username')}" class="input input-bordered w-full">
+                        <input type="text" name="username" placeholder="{text('placeholder.username')}" class="input input-bordered w-full">
                     </label>
                 </div>
 
                 <div>
                     <label>
-                        <input type="email" name="email" placeholder="{text('core.placeholder.email')}" class="input input-bordered w-full">
+                        <input type="email" name="email" placeholder="{text('placeholder.email')}" class="input input-bordered w-full">
                     </label>
                 </div>
 
                 <div>
                     <label>
-                        <input type="password" name="password" placeholder="{text('core.placeholder.password')}"
+                        <input type="password" name="password" placeholder="{text('placeholder.password')}"
                                class="input input-bordered w-full" autocomplete="new-password">
                     </label>
                 </div>
 
                 <div class="text-center">
-                    {\Ivy\Button::submit(text('register.button.submit'))}
+                    {button type:submit, text:text('register.register')}
                 </div>
 
                 <div class="text-center">
