--- a/templates/base/buttons/button.submit.latte
+++ b/templates/base/buttons/button.submit.latte
@@ -1,4 +1,4 @@
-<button class="btn btn-outline rounded-full px-8"
+<button class="btn btn-outline rounded-full"
         name="submit" type="submit" value="{$text}">
     {$text}
 </button>
