--- a/templates/base/css/input.css
+++ b/templates/base/css/input.css
@@ -1,11 +1,12 @@
+@import "tailwindcss";
+@plugin "daisyui" {
+    themes: light --default, dark --prefersdark;
+}
+
 html, body {
     min-height: 100%;
     height: 100%;
 }
-
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
 
 /* SWITCH */
 
@@ -24,7 +25,7 @@ html, body {
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: oklch(var(--nc));
+    background-color: var(--color-base-300);
     -webkit-transition: .3s;
     -moz-transition: .3s;
     -o-transition: .3s;
@@ -40,7 +41,7 @@ html, body {
     width: 26px;
     left: 2px;
     bottom: 2px;
-    background-color: white;
+    background-color: var(--color-base-100);
     -webkit-transition: .3s;
     -moz-transition: .3s;
     -o-transition: .3s;
@@ -50,33 +51,24 @@ html, body {
 }
 
 .form-check-input:checked ~ .switch .slider {
-    background-color: oklch(var(--inc));
+    background-color: var(--color-base-content);
 }
 
 @media (prefers-color-scheme: dark) {
     .slider {
-        background-color: oklch(var(--inc));
+        background-color: var(--color-base-300);
     }
     .slider:before {
-        background-color: oklch(var(--b1));
+        background-color: var(--color-base-100);
     }
     .form-check-input:checked ~ .switch .slider {
-        background-color: oklch(var(--nc));
+        background-color: var(--color-base-content);
     }
 }
 
 .form-check-input:checked ~ .switch .slider:before {
     -ms-transform: translateX(15px);
     transform: translateX(15px);
-}
-
-.btn {
-    min-height: 2.5rem;
-}
-
-.btn-square {
-    height: 2.5rem;
-    width: 2.5rem;
 }
 
 .btn svg {
