--- a/templates/base/include/confirm_modal.latte
+++ b/templates/base/include/confirm_modal.latte
@@ -8,7 +8,7 @@
         <h3 class="text-lg font-bold leading-none">Header</h3>
         <div class="modal-action">
             <div class="modal-action">
-                {\Ivy\Button::confirm($text, $value, $form_action)}
+                {button type:confirm, text:$text, value:$value, form_action:$form_action}
             </div>
         </div>
     </div>
