--- a/templates/base/buttons/button.delete.latte
+++ b/templates/base/buttons/button.delete.latte
@@ -13,6 +13,6 @@
         </div>
     </div>
 
-    <label class="btn btn-neutral btn-square join-item" for="modal_delete_{$id}">
+    <label class="btn btn-neutral btn-square join-item" title="{text('button.delete')}" for="modal_delete_{$id}">
         {icon("feather/trash-2.svg")|noescape}
     </label>
