--- a/templates/base/include/header.latte
+++ b/templates/base/include/header.latte
@@ -57,7 +57,7 @@
                                 <li>
                                     <a href="{path('BASE_PATH') . 'plugin/tag/manage'}">
                                         {icon("feather/tag.svg")|noescape}
-                                        {text('menu.tags')}
+                                        {text('tag.menu.tags')}
                                     </a>
                                 </li>
                             {/if}
