--- a/templates/base/css/output.css
+++ b/templates/base/css/output.css
@@ -940,14 +940,8 @@
   .top-2 {
     top: calc(var(--spacing) * 2);
   }
-  .top-4 {
-    top: calc(var(--spacing) * 4);
-  }
   .right-2 {
     right: calc(var(--spacing) * 2);
-  }
-  .right-4 {
-    right: calc(var(--spacing) * 4);
   }
   .z-\[1\] {
     z-index: 1;
@@ -1037,29 +1031,6 @@
     align-items: center;
     padding: 0.5rem;
     min-height: 4rem;
-  }
-  .footer {
-    display: grid;
-    width: 100%;
-    grid-auto-flow: row;
-    place-items: start;
-    column-gap: calc(0.25rem * 4);
-    row-gap: calc(0.25rem * 10);
-    font-size: 0.875rem;
-    line-height: 1.25rem;
-    & > * {
-      display: grid;
-      place-items: start;
-      gap: calc(0.25rem * 2);
-    }
-    &.footer-center {
-      grid-auto-flow: column dense;
-      place-items: center;
-      text-align: center;
-      & > * {
-        place-items: center;
-      }
-    }
   }
   .alert {
     display: grid;
@@ -1224,9 +1195,6 @@
   .flex-col {
     flex-direction: column;
   }
-  .place-items-end {
-    place-items: end;
-  }
   .place-items-stretch {
     place-items: stretch;
   }
@@ -1284,6 +1252,9 @@
   }
   .p-4 {
     padding: calc(var(--spacing) * 4);
+  }
+  .p-5 {
+    padding: calc(var(--spacing) * 5);
   }
   .px-2 {
     padding-inline: calc(var(--spacing) * 2);
